# ccconnect_plateform

./: .gitignore  AI_INTERVIEWER_INTEGRATION.md  AUTH_SYSTEM.md  DATABASE_SETUP.md  EMAIL_VERIFICATION.md  HOW_TO_TEST.md  JOB_MATCHER_INTEGRATION.md  MONGODB_SETUP_GUIDE.md  QUICK_SETUP.md  README.md  README_DATABASE.md  TESTING.md  app.py  build_resume.py  check_json.py  check_pdfs.py  index.html  main.py  middleware.js  package-lock.json  package.json  pdf_generator.py  requirements.txt  tailwind.config.js  temp_ats_scorer.py  temp_scoring_jd.py  temp_scoring_no_jd.py  template_rendercv.tex  test.js
UtopiaHire-IEEE-CS-main/: .gitignore
UtopiaHire-IEEE-CS-main/Backend/: README.md  __init__.py  pyproject.toml  requirements.txt
UtopiaHire-IEEE-CS-main/Backend/agents/: interviewer_agent.py
UtopiaHire-IEEE-CS-main/Backend/services/: storage.py
UtopiaHire-IEEE-CS-main/Backend/utils/: config.py  scoring.py
app/: layout.jsx  main.py  not-found.jsx  page.jsx
backend-ai-interviewer/: .env  README.md  main.py  setup.py
backend-job-matcher/: README.md  main.py  requirements.txt
backend-resume-reviewer/: README.md  SETUP_OLLAMA.md  TESTING.md  main.py  requirements.txt  test_pdf_generation.py
config/: constants.js
context/: AIInterviewerContext.jsx  AuthContext.jsx
data/: sample_cvs.json  sample_jobs.json
latex_gen_files/: build_resume.py  template_rendercv.tex
layouts/: AuthLayout.jsx  CompanyDashboardLayout.jsx  DashboardLayout.jsx
lib/: ai-interviewer-api.js  auth-middleware.js  auth.js  db-utils.js  email.js  job-matcher-api.js  mongodb.js  (+1 more)
(+216 files in other folders)
