[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "1.0.0"
description = "AI-Driven Adaptive Interview Simulator Backend"
authors = [{name = "Developer", email = "dev@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=1.10.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "ollama>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]